--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-  <img src="https://image.freepik.com/free-vector/funky-monkey-vector_43623-41.jpg" width="60px" height="60px"/>
+  <img class="monkeysofheader" src="https://image.freepik.com/free-vector/funky-monkey-vector_43623-41.jpg" width="60px" height="60px"/>
   <h1>CSS Monkeys</h1>
   <nav>
     <ul>
@@ -19,7 +19,7 @@
 
 <main>
   <section class="description" id="description">
-    <img src="https://image.freepik.com/vetores-gratis/vetor-de-macaco-funky_43623-265.jpg"/>
+    <img id="descriptionimage" src="https://image.freepik.com/vetores-gratis/vetor-de-macaco-funky_43623-265.jpg"/>
 
     <h2>Description</h2>
 
@@ -36,7 +36,7 @@
 
   <section class="relationship" id="relationship">
     <img
-      src="https://image.freepik.com/free-vector/monkey-officer_43623-650.jpg"/>
+      id="relationshipimage" src="https://image.freepik.com/free-vector/monkey-officer_43623-650.jpg"/>
     <h2>Relationship</h2>
 
     <p class="relationship-p1">
